Fix overflow-x in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.cdnfonts.com/css/exton-free-trial');
 
 /*CSS Reset*/
+
 html {
     box-sizing: border-box;
     font-size: 16px;
@@ -64,12 +65,14 @@ nav {
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
-    background-color: #002653;
+    /*background-color: #002653;*/
+    background-color: transparent;
 }
 
-/*.navbar {*/
-/*    transition: 1s;*/
-/*}*/
+#navbar.navbar-shrink {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    background-color: #002653;
+}
 
 .navbar-dark .navbar-toggler-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(253, 163, 30)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
@@ -88,6 +91,10 @@ nav {
 }
 
 @media screen and (max-width: 575px) {
+    /*html, body {*/
+    /*    overflow-x: hidden;*/
+    /*}*/
+
     header.masthead {
         position: relative;
         overflow: hidden;
